--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<title>Scoring</title>
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="lib/node_modules/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<!-- Local CSS -->
 		<link rel="stylesheet" href="css/main.css">
 		<script src="https://use.fontawesome.com/9fc239fc88.js"></script>
@@ -12,17 +12,17 @@
 		<div ng-view></div>
 
 		<!-- jQuery For Bootstrap -->
-		<script src="lib/node_modules/jquery/dist/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<!-- Popper For Bootstrap -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<!-- Bootstrap JS -->
-		<script src="lib/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 		<!-- Angular -->
-		<script src="lib/node_modules/angular/angular.js"></script>
+		<script src="dist/angular.js"></script>
 		<!-- Angular Route -->
-		<script src="lib/node_modules/angular-route/angular-route.js"></script>
+		<script src="dist/angular-route.js"></script>
 		<!-- Firebase -->
-		<script src="lib/node_modules/firebase/firebase.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 		<!-- D3 -->
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<!-- Local JS -->
